# tinybmp

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  README.tpl  filter_readme.sed  justfile  release.toml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benches/: draw.rs  parse.rs
doc/: releasing.md
examples/: display.rs
src/: color_table.rs  dynamic_bmp.rs  header.rs  iter.rs  lib.rs  parser.rs  pixels.rs  raw_bmp.rs  raw_iter.rs  raw_pixels.rs
src/header/: dib_header.rs  mod.rs
tests/: chessboard-16px-1bit.rs  chessboard-8px-1bit.rs  chessboard-8px-24bit.rs  chessboard-8px-color-16bit.rs  colors_8bpp_indexed.rs  coordinates.rs  embedded_graphics.rs  errors.rs  ethernet_port.rs  logo-indexed-1bpp.raw  logo-indexed-4bpp.raw  logo-indexed-8bpp.raw  logo-rgb555.raw  logo-rgb565.raw  logo-rgb888.raw  logo.rs  pr_50_rle4_padding.raw
