[package]
name = "tinybmp"
description = "No-std, low memory footprint BMP image loader"
version = "0.3.2"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
repository = "https://github.com/embedded-graphics/tinybmp"
documentation = "https://docs.rs/tinybmp"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", "bmp", "bitmap", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/",
    "/.circleci/",
    ".gitignore",
]

[badges]
circle-ci = { repository = "embedded-graphics/tinybmp", branch = "master" }

[[test]]
name = "embedded_graphics"

[[bench]]
name = "parse"
harness = false

[dependencies]
embedded-graphics = "0.7.1"
nom = { version = "6.0.1", default-features = false }

[dev-dependencies]
clap = { version = "3.1.6", features = ["derive"] }
criterion = "0.3.5"
embedded-graphics-simulator = "0.3.0"
