[package]
name = "tinybmp"
description = "No-std, low memory footprint BMP image loader"
version = "0.6.0"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
repository = "https://github.com/embedded-graphics/tinybmp"
documentation = "https://docs.rs/tinybmp"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", "bmp", "bitmap", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/",
    ".gitignore",
]

[[test]]
name = "embedded_graphics"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "draw"
harness = false

[dependencies]
embedded-graphics = "0.8.0"

[dev-dependencies]
clap = { version = "3.1.6", features = ["derive"] }
criterion = "0.3.5"
embedded-graphics-simulator = { version = "0.5.0", default-features = false }
